@@ -6,7 +6,8 @@ Changes
 1.1 (unreleased)
 ================
 
-- Nothing changed yet.
+- Renamed console commands to dump/load instead of checkout/checkin to avoid
+  confusion with SCM operations.
 
 
 1.0 (2011-01-31)
